Fixed top content margins, aligned nav-bar to desin file.

--- a/css/index.css
+++ b/css/index.css
@@ -71,26 +71,51 @@ p {
     margin: 0 auto;
 };
 
+.container .header {
+    display: flex;
+}
+
+
 header{
     background: url("./img/jumbo.jpg");
     background-attachment: fixed;
     background-position: top center;
     background-repeat: no-repeat;
     width: 100%;
-}
-.top-content {
     display: flex;
     flex-flow: row;
+    justify-content: space-between;
+    max-height: 40px;
+    margin: 2% 0 5% 0;
+    
+}
+
+header nav {
+
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    font-size: .875rem;
+}
+
+
+.top-content {
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-top: 20px;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+    
+
 }
 
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
+     
 }
 
 .middle-content {
@@ -205,9 +230,6 @@ footer nav a {
         flex-wrap: wrap;
         min-width: 100px;
     }
-   
-
- 
 
 }
 
